--- a/package.json
+++ b/package.json
@@ -20,13 +20,28 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-icons": "^1.3.1",
+    "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.1",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@tsparticles/engine": "^3.5.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.5.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "drizzle-orm": "^0.33.0",
+    "framer-motion": "^11.11.11",
     "geist": "^1.3.0",
+    "lucide-react": "^0.454.0",
     "next": "^15.0.1",
     "postgres": "^3.4.4",
+    "posthog-js": "^1.180.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.5.4",
+    "tsparticles-engine": "^2.12.0",
     "zod": "^3.23.3"
   },
   "devDependencies": {
@@ -44,6 +59,7 @@
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.5.3"
   },
   "ct3aMetadata": {
