--- a/package.json
+++ b/package.json
@@ -21,11 +21,17 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.1.0",
+    "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.2.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@sentry/nextjs": "^8.36.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tsparticles/engine": "^3.5.0",
@@ -33,18 +39,23 @@
     "@tsparticles/slim": "^3.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "discord.js": "^14.16.3",
     "drizzle-orm": "^0.33.0",
     "framer-motion": "^11.11.11",
     "geist": "^1.3.0",
     "lucide-react": "^0.454.0",
     "next": "^15.0.1",
+    "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
     "posthog-js": "^1.180.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1",
+    "sonner": "^1.6.1",
     "tailwind-merge": "^2.5.4",
     "tsparticles-engine": "^2.12.0",
-    "zod": "^3.23.3"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
