--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@clerk/nextjs": "^6.1.0",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -51,6 +52,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "concurrently": "^9.1.0",
+    "cuid": "^3.0.0",
     "date-fns": "^3.6.0",
     "discord.js": "^14.16.3",
     "drizzle-orm": "^0.33.0",
