--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "tailwind-merge": "^2.5.4",
     "tsparticles-engine": "^2.12.0",
     "vaul": "^1.1.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
