--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "db:push:verbose": "drizzle-kit push --verbose",
     "db:drop": "drizzle-kit drop",
     "db:studio": "drizzle-kit studio",
-    "dev": "next dev --turbo",
+    "dev": "next dev --turbopack",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
@@ -28,7 +28,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.1.0",
     "@hookform/resolvers": "^3.9.1",
-    "@next/bundle-analyzer": "^15.0.4",
+    "@next/bundle-analyzer": "15.1.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -63,12 +63,12 @@
     "geist": "^1.3.0",
     "lucide-react": "^0.454.0",
     "motion": "^11.13.1",
-    "next": "^15.0.1",
+    "next": "15.1.0",
     "next-themes": "^0.4.4",
     "postgres": "^3.4.4",
-    "react": "^18.3.1",
+    "react": "19.0.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "19.0.0",
     "react-hook-form": "^7.53.1",
     "sonner": "^1.6.1",
     "tailwind-merge": "^2.5.4",
@@ -80,13 +80,13 @@
   "devDependencies": {
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.14.10",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.2",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "drizzle-kit": "^0.24.0",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^15.0.1",
+    "eslint-config-next": "15.1.0",
     "eslint-plugin-drizzle": "^0.2.3",
     "pg": "^8.13.1",
     "postcss": "^8.4.39",
@@ -99,5 +99,9 @@
   "ct3aMetadata": {
     "initVersion": "7.38.0"
   },
-  "packageManager": "npm@10.8.3"
+  "packageManager": "npm@10.8.3",
+  "overrides": {
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.2"
+  }
 }
