--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
     "@uidotdev/usehooks": "^2.4.1",
+    "@upstash/ratelimit": "^2.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
