--- a/package.json
+++ b/package.json
@@ -5,102 +5,48 @@
   "type": "module",
   "scripts": {
     "build": "next build",
-    "check": "concurrently --names \"lint,typecheck,format\" --prefix-colors \"yellow,blue,green\" \"next lint\" \"tsc --noEmit\" \"npm run format:check\"",
+    "check": "next lint && tsc --noEmit",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
-    "db:push:verbose": "drizzle-kit push --verbose",
-    "db:drop": "drizzle-kit drop",
     "db:studio": "drizzle-kit studio",
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbo",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
+    "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
     "start": "next start",
-    "typecheck": "tsc --noEmit",
-    "format:write:prettier": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
-    "format:check:prettier": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
-    "format:write:eslint": "eslint . --fix",
-    "format:check:eslint": "eslint .",
-    "format:write": "npm run format:write:prettier && npm run format:write:eslint",
-    "format:check": "npm run format:check:prettier && npm run format:check:eslint"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.1.0",
-    "@hookform/resolvers": "^3.9.1",
-    "@next/bundle-analyzer": "15.1.0",
-    "@radix-ui/react-accordion": "^1.2.1",
-    "@radix-ui/react-checkbox": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-icons": "^1.3.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-navigation-menu": "^1.2.1",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-progress": "^1.1.0",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slider": "^1.2.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.1",
-    "@radix-ui/react-toggle": "^1.1.0",
-    "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.4",
-    "@t3-oss/env-nextjs": "^0.10.1",
-    "@tsparticles/engine": "^3.5.0",
-    "@tsparticles/react": "^3.0.0",
-    "@tsparticles/slim": "^3.5.0",
-    "@uidotdev/usehooks": "^2.4.1",
-    "@upstash/ratelimit": "^2.0.5",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.0.4",
-    "concurrently": "^9.1.0",
-    "cuid": "^3.0.0",
-    "date-fns": "^3.6.0",
-    "discord.js": "^14.16.3",
-    "drizzle-orm": "^0.33.0",
-    "framer-motion": "^11.11.11",
-    "geist": "^1.3.0",
-    "lucide-react": "^0.454.0",
-    "motion": "^11.13.1",
-    "next": "15.1.0",
-    "next-themes": "^0.4.4",
+    "@t3-oss/env-nextjs": "^0.12.0",
+    "drizzle-orm": "^0.41.0",
+    "next": "^15.2.3",
     "postgres": "^3.4.4",
-    "react-day-picker": "^8.10.1",
-    "react-hook-form": "^7.53.1",
-    "sonner": "^1.6.1",
-    "tailwind-merge": "^2.5.4",
-    "tsparticles-engine": "^2.12.0",
-    "vaul": "^1.1.1",
-    "zod": "^3.23.8",
-    "zustand": "^5.0.2"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/eslint": "^8.56.10",
+    "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.0.15",
     "@types/node": "^20.14.10",
-    "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.2",
-    "@typescript-eslint/eslint-plugin": "^8.1.0",
-    "@typescript-eslint/parser": "^8.1.0",
-    "drizzle-kit": "^0.24.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "15.1.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "drizzle-kit": "^0.30.5",
+    "eslint": "^9.23.0",
+    "eslint-config-next": "^15.2.3",
     "eslint-plugin-drizzle": "^0.2.3",
-    "pg": "^8.13.1",
-    "postcss": "^8.4.39",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8",
-    "tailwindcss": "^3.4.3",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.5.3"
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.0.15",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.27.0"
   },
   "ct3aMetadata": {
-    "initVersion": "7.38.0"
+    "initVersion": "7.39.3"
   },
-  "packageManager": "npm@10.8.3",
-  "overrides": {
-    "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.2"
-  }
+  "packageManager": "pnpm@10.7.1"
 }
